Fixes various styling bugs in select The extra right-side padding is only needed within inspector, outside usage shows too much padding Constrain the select width for important updates

--- a/modules/system/assets/ui/less/inspector.less
+++ b/modules/system/assets/ui/less/inspector.less
@@ -320,6 +320,10 @@
                 background: white;
             }
         }
+
+        .select2-selection__rendered {
+            padding: 0 22px 0 0;
+        }
     }
 
     tr.changed {
