--- a/modules/system/assets/ui/less/select.less
+++ b/modules/system/assets/ui/less/select.less
@@ -270,7 +270,7 @@
 
         .select2-selection__rendered {
             color: @input-color;
-            padding: 0 22px 0 0;
+            padding: 0;
         }
 
         .select2-selection__placeholder {
